# adeu-studio

./: .env.example  .gitignore  ADEU Recursive Self-Improvement Policy.md  AGENTS.md  LICENSE  Makefile  README.md  REPO_ATLAS.md  USECASES.md  pyproject.toml
apps/api/: pyproject.toml
apps/api/scripts/: benchmark_test_selection_v0.py  build_core_ir_depth_transfer_report_vnext_plus15.py  build_core_ir_proposer_transfer_report_vnext_plus25.py  build_domain_conformance.py  build_extraction_fidelity_transfer_report_vnext_plus24.py  build_integrity_transfer_report_vnext_plus16.py  build_integrity_transfer_report_vnext_plus17.py  build_portability_transfer_report_vnext_plus11.py  build_provider_parity_transfer_report_vnext_plus14.py  build_quality_dashboard.py  build_read_surface_transfer_report_vnext_plus19.py  build_stop_gate_metrics.py  build_tooling_transfer_report_vnext_plus26.py  check_s9_triggers.py  evaluate_agentic_de_connector_bridge_hardening_v62c.py  evaluate_agentic_de_continuation_v60c.py  evaluate_agentic_de_delegated_worker_hardening_v65c.py  evaluate_agentic_de_governed_communication_v61c.py  evaluate_agentic_de_interaction_v56c.py  evaluate_agentic_de_live_harness_v58c.py  evaluate_agentic_de_local_effect_v57c.py  evaluate_agentic_de_remote_operator_hardening_v63c.py  evaluate_agentic_de_repo_writable_surface_hardening_v64c.py  evaluate_agentic_de_workspace_continuity_v59c.py  generate_instruction_policy_views.py  lint_agentic_de_interaction_v56a.py  lint_arc_bundle.py  lint_closeout_consistency.py  lint_constitutional_coherence_v55a.py  (+29 more)
(+3571 files in other folders)
