[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adeu-api"
version = "0.0.0"
description = "FastAPI service for ADEU Studio."
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.24,<1",
  "adeu-ir>=0.0.0",
  "adeu-kernel>=0.0.0",
  "adeu-concepts>=0.0.0",
  "adeu-puzzles>=0.0.0",
  "adeu-explain>=0.0.0",
  "adeu-semantic-depth>=0.0.0",
  "urm-runtime>=0.0.0",
  "urm-domain-adeu>=0.0.0",
  "urm-domain-digest>=0.0.0",
  "urm-domain-paper>=0.0.0",
]

[project.scripts]
explain-tools = "adeu_api.explain_tools:main"

[tool.hatch.build.targets.wheel]
packages = ["src/adeu_api"]
include = ["src/adeu_api/provider_parity/*.json"]

[tool.hatch.build.targets.sdist]
include = ["src/adeu_api/provider_parity/*.json"]
